--- a/src/components/Assets/Editbar.scss
+++ b/src/components/Assets/Editbar.scss
@@ -3,8 +3,6 @@
 .Editbar {
   @include flexOff;
   @include flexRow;
-  @include fullWidth;
-  @include flexJustifySpaceBetween;
   @include flexAlignItemsCenter;
   @include clampText;
 
@@ -15,7 +13,6 @@
 
   span[class*="icon-"] {
     margin-left: 6px;
-    margin-right: 6px;
   }
 
   .Editbar-title {
@@ -23,12 +20,6 @@
     text-transform: uppercase;
     @include noSelect;
     @include clampText;
-  }
-
-  .Editbar-right-side {
-    @include flexRow;
-    @include clampText;
-    margin-right: 12px;
   }
 
   .Editbar-selected {
@@ -60,10 +51,11 @@
     }
   }
 
-  .Editbar-export {
-    margin-left: 12px;
-    margin-right: 12px;
+  .Editbar-similar {
+    margin-right: 8px;
     text-transform: uppercase;
+    border-radius: 3px;
+    padding: 5px;
     @include flexRow;
     @include flexAlignItemsCenter;
     @include clampText;
@@ -73,7 +65,28 @@
     }
 
     &:not(.disabled):hover {
-      color: $zorroa-sickly-green;
+      background-color: $zorroa-nearwhite;
+      cursor:pointer;
+    }
+  }
+
+  .Editbar-export {
+    margin-left: 12px;
+    text-transform: uppercase;
+    border-radius: 3px;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    @include flexRow;
+    @include flexAlignItemsCenter;
+    @include clampText;
+
+    &.disabled {
+      color: $zorroa-lightgray;
+    }
+
+    &:not(.disabled):hover {
+      background-color: $zorroa-nearwhite;
       cursor:pointer;
     }
   }
@@ -93,62 +106,5 @@
     &.disabled {
       color: $zorroa-lightgray;
     }
-  }
-}
-
-.SortingSelector {
-  @include flexRow;
-  @include flexAlignItemsCenter;
-  @include flexShrinkOnly;
-  @include clampText;
-
-  text-transform: uppercase;
-  font-size: 12px;
-  font-family: "Roboto Condensed";
-  margin-left: 10px;
-  color: $zorroa-lightgray;
-
-  .SortingSelector-title {
-    @include clampText;
-    margin-right: 10px;
-  }
-
-  .SortingSelector-sort {
-    @include clampText;
-
-    margin-right: 10px;
-    color: $zorroa-gray;
-
-    &:not(.SortingSelector-disabled):hover {
-      cursor: pointer;
-      color: $zorroa-darkgray;
-      text-decoration: underline;
-    }
-
-    &.SortingSelector-selected {
-      cursor: default;
-      color: $zorroa-sickly-green;
-      text-decoration: underline;
-    }
-
-    &.SortingSelector-disabled:not(.SortingSelector-selected) {
-      cursor: not-allowed;
-      color: $zorroa-lightgray;
-      text-decoration: none;
-    }
-  }
-
-  .SortingSelector-similar {
-    @include flexRowCenter;
-    @include clampText;
-    color: $zorroa-darkgray;
-    &:hover {
-      color: $zorroa-sickly-green;
-    }
-  }
-
-  .SortingSelector-icon {
-    &:hover { color: $zorroa-sickly-green; }
-    .SortingSelector-selected:hover & { color: $zorroa-sickly-green; }
   }
 }
