--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -31,7 +31,9 @@
 }
 
 .header-menu {
-  margin-left: 20px;
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  margin-right: 20px;
   position: relative;
 
   .job {
@@ -51,8 +53,6 @@
   }
 
   &.header-menu-user {
-    @include flexRow;
-    @include flexAlignItemsCenter;
 
     .DropdownMenu-button {
       text-transform: none;
@@ -132,22 +132,21 @@
   margin: 4px;
   font-size: 20px;
   cursor: pointer;
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
   border-radius: 3px;
 
-  &.disabled {
-    color: $zorroa-lightgray;
-  }
+  &.disabled { color: $zorroa-lightgray; }
 
-  &:hover:not(.disabled) {
-    color: white;
-    background-color: $zorroa-lightgray;
-  }
+  &:hover:not(.disabled) { background-color: $zorroa-nearwhite; }
 
   &.selected {
     color: white;
     background-color: $zorroa-water-blue;
     &:hover { background-color: darken($zorroa-water-blue, 15%); }
   }
+}
+
+.header-table-spacer {
+  width: 40px;
 }
