--- a/src/components/Racetrack/Racetrack.scss
+++ b/src/components/Racetrack/Racetrack.scss
@@ -2,171 +2,14 @@
 
 .Racetrack {
 
-  .Racetrack-body {
-  }
+  @include flexCol;
 
-  .Racetrack-empty {
-    background-color: rgba(200,200,200,1);
-    color: transparent;
-    text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-
-    .Racetrack-empty-mag:before {
-      width: 48px;
-      height: 48px;
-      font-size: 48pt;
-    }
-
-    .Racetrack-empty-mag {
-      padding: 12px;
-      margin-bottom: 30px;
-    }
-
-    .Racetrack-empty-text {
-      text-align: center;
-      font-size: 14px;
-      font-weight: 700;
-    }
-
-    form {
-    }
-
-    input {
-      margin-top: 30px;
-      margin-left: 0;
-      margin-right: 0;
-      padding-left: 8px;
-      border-radius: 3px;
-      background: none;
-      border: 2px solid #ccc;
-      height: 24px;
-      font-size: 14px;
-      font-weight: 500;
-      color: $zorroa-gray;
-    }
-  }
-
-  .Racetrack-filters {
-    flex: 0.8;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+  flex: 0.8;
+  padding-left: 10px;
+  padding-right: 10px;
 
   .Racetrack-widget {
     margin-top: 6px;
     background-color: #fff;
   }
-
-  .Racetrack-add-filter {
-    padding: 0;
-    margin: 40px 0;
-
-    @include flexRow;
-    @include flexAlignItemsCenter;
-    @include flexJustifyCenter;
-
-    .Racetrack-add-filter-item {
-      margin-top: 4px;
-    }
-
-    .Racetrack-add-widget {
-      height: 40px;
-      padding: 0 12px;
-      font-size: 14px;
-      background-color: $zorroa-greyish-brown;
-      color: $zorroa-nearwhite;
-      border-radius: 3px;
-      border: none;
-      margin-right: 12px;
-      font-weight: 500;
-      text-transform: uppercase;
-      @include noSelect;
-      cursor: pointer;
-
-      @include flexRow;
-      @include flexAlignItemsCenter;
-
-      i {
-        margin-right: 6px;
-      }
-
-      &:hover {
-        background-color: #a5a5a5;
-        color: $zorroa-nearwhite;
-      }
-
-      &:active {
-        background-color: $zorroa-sickly-green;
-        color: $zorroa-nearwhite;
-      }
-    }
-
-    & .DropdownMenu-item {
-      &:hover { background-color: unset; }
-    }
-  }
-
-  .Racetrack-footer {
-    display: flex;
-    justify-content: center;
-    border-top: 1px solid $zorroa-lightgray;
-    margin-left: 8px;
-    margin-right: 8px;
-
-    .Racetrack-footer-group {
-      @include flexRowCenter;
-    }
-
-    .Racetrack-footer-save {
-      background-color: $zorroa-gray;
-      color: white;
-
-      &:disabled {
-        cursor: not-allowed;
-        background-color: $zorroa-lightgray;
-      }
-
-      &:hover:enabled {
-        color: white;
-        background-color: $zorroa-sickly-green;
-      }
-    }
-
-    button {
-      margin: 12px;
-      padding: 12px 30px;
-      font-size: 14px;
-      font-weight: 500;
-      color: $zorroa-gray;
-      border-radius: 3px;
-      background: none;
-      border: none;
-      cursor:pointer;
-      text-transform: uppercase;
-
-      &:hover:enabled {
-        background-color: #a5a5a5;
-        color: $zorroa-nearwhite;
-        font-weight: 500;
-      }
-
-      &:active {
-        background-color: $zorroa-sickly-green;
-        color: $zorroa-nearwhite;
-        font-weight: 500;
-      }
-    }
-  }
-}
-
-.Racetrack-add-menu {
-  width: 300px;
-}
-
-.Racetrack-empty-icon-mag {
-  @extend .Racetrack-empty;
-  font-size: 30px;
-  padding: 5px 8px;
 }
