--- a/src/components/Suggestions/Suggestions.scss
+++ b/src/components/Suggestions/Suggestions.scss
@@ -1,41 +1,47 @@
 @import '../../styles/core-mixins.scss';
 
 .Suggestions {
+  position: relative;
+  @include flexRow;
+  @include flexAlignItemsCenter;
 }
 
 .Suggestions-overlapping-inputs {
   @include fullWidth;
+  @include flexColCenter;
   height: 25px;
   position: relative;
-
-  // Underline-only bar
-  input {
-    background: transparent;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-  }
 }
 
 .Suggestions-search {
-  font-size: 16px;
+  font-size: 14px;
   border: none;
-  border-bottom: 2px solid $zorroa-sickly-green;
+  position: absolute;
+  padding-left: 20px;
+  padding-right: 20px;
+  left: 0;
+  width: 100%;
+  background: transparent;
 }
 
 .Suggestions-typeahead {
   z-index: -1;
   color: $zorroa-lightgray;
-  font-size: 16px;
+  font-size: 14px;
   border: none;
+  position: absolute;
+  padding-left: 20px;
+  padding-right: 20px;
+  left: 0;
+  width: 100%;
+  background: transparent;
 }
 
 
 // Clear text button
 .Suggestions-clear {
   position: absolute;
-  right: -5px;
+  right: 0;
   border: none;
   background: none;
   color: $zorroa-gray;
@@ -52,8 +58,6 @@
 
 .Suggestions-suggestions {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
   position: absolute;
   top: 100%;
   z-index: 1000;
@@ -62,12 +66,10 @@
   background-color: rgba(255, 255, 255, 0.85);
   border-radius: 3px;
   border: 1px solid $zorroa-lightgray;
-  box-sizing: border-box;
   list-style-type: none;
   margin: 2px 0 0;
   text-align: left;
   box-shadow: 0 4px 10px 0 $zorroa-darkgray;
-  padding: 8px 0;
   min-width: 100%;
 }
 
@@ -94,5 +96,17 @@
   padding: 5px 5px 0 5px;
   text-align: center;
   width: 100%;
-  // border-top: 1px solid $zorroa-lightgray;
+}
+
+// Magnifying glass
+.Suggestions-search-button {
+  position: absolute;
+  left: 0;
+  padding: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+  color: $zorroa-gray;
+  font-size: 14px; // TODO: see if we can delete this when bootstrap is gone
+  &:hover { color: $zorroa-gray; }
 }
