--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -32,7 +32,11 @@ $zorroa-warm-grey-60   : rgba(128, 128, 128, 0.6);
 $zorroa-slategray      : #787a77;
 $zorroa-light-green    : #b7df4d;
 $zorroa-golden-yellow  : #ead011;
-
+$zorroa-army-taupe     : #77804d;
+$zorroa-brow-taupe     : #7b5f52;
+$zorroa-blue-taupe     : #5a7a7e;
+$zorroa-purple-taupe   : #786974;
+$zorroa-orange-taupe   : #7d6358;
 
 // A few extra useful colors Amber didn't specify
 
