--- a/src/components/Racetrack/Range.scss
+++ b/src/components/Racetrack/Range.scss
@@ -7,6 +7,10 @@
     color: $zorroa-nearwhite;
   }
 
+  .WidgetHeader-header-field {
+    min-width: 100px;
+  }
+
   .Range-body {
     background-color: white;
     color: $zorroa-gray;
@@ -130,6 +134,7 @@
     @include flexOn;
     @include flexRowCenter;
     @include zorroa-darken;
+    @include nowrap;
     cursor: pointer;
     width: 100%;
     padding: 3px;
