Remove sidebar toggles. Fix Editibar similar enable. Tweak Racebar margins.

--- a/src/components/Racetrack/Racebar.scss
+++ b/src/components/Racetrack/Racebar.scss
@@ -5,7 +5,10 @@
   @include flexAlignItemsCenter;
   @include flexWrap;
   @include fullWidth;
-  margin-top: 8px;
+  margin: 4px;
+}
+
+.Racebar-widget {
   margin-left: 4px;
   margin-right: 4px;
 }
