--- a/src/components/Assets/ThumbSizeSlider.scss
+++ b/src/components/Assets/ThumbSizeSlider.scss
@@ -28,9 +28,13 @@
   height: 30px;
   border-radius: 3px;
   cursor: pointer;
-  &:hover { background-color: $zorroa-lightgray; }
+  &:hover {
+    background-color: $zorroa-lightgray;
+  }
+  [class*='icon-'] {
+    font-size: 12px;
+  }
 }
-
 .ThumbSizeSlider-box {
   position: relative;
 }
