--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -14,6 +14,11 @@
 
   background-color: $zorroa-nearwhite;
 
+  &.isIconified {
+    cursor: e-resize;
+    &.isRightEdge { cursor: w-resize; }
+  }
+
   &.isOpen {
     min-width: $zorroa-Sidebar-width;
     max-width: 3 * $zorroa-Sidebar-width;
