--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -50,6 +50,7 @@
   height: 100%;
   cursor: col-resize;
   background: none;
+  z-index: 1;
 
   &.isRightEdge {
     // place right sidebar resizer in the sidebar's left side padding
