Testing fixes: clear, create sort and collection widgets, open Metadata and Collection sections by default.

--- a/src/components/Racetrack/SortOrder.scss
+++ b/src/components/Racetrack/SortOrder.scss
@@ -40,6 +40,7 @@
 .SortOrder-label {
   color: $zorroa-gray;
   margin: 4px;
+  &:hover { color: $zorroa-sickly-green; }
 }
 
 .SortOrder-suggestions {
