Add uxLevel. Add state.assets.searching and ProgressBar under Racebar. Tighten left sidebar Collapsible height to match Racebar widgets.

--- a/src/components/Preferences/Preferences.scss
+++ b/src/components/Preferences/Preferences.scss
@@ -153,3 +153,14 @@
   margin-left: 8px;
   color: $zorroa-gray;
 }
+
+.Preferences-uxlevel {
+  @include flexRowCenter;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.Preferences-uxlevel-label {
+  margin-left: 4px;
+  color: $zorroa-gray;
+}
