--- a/src/components/Collapsible/CollapsibleHeader.scss
+++ b/src/components/Collapsible/CollapsibleHeader.scss
@@ -1,16 +1,14 @@
 @import '../../styles/core-mixins.scss';
 
 .Collapsible {
-  .scroller > & {
-    margin-bottom: 5px;
-  }
+  .scroller > & { margin-bottom: 7px; }
   border-radius: 3px;
   overflow:hidden;
 }
 
 .CollapsibleHeader {
   @include nowrap;
-  height: 40px;
+  height: 30px;
   text-transform: uppercase;
   overflow: hidden;
   cursor: pointer;
@@ -44,9 +42,11 @@
 }
 
 .CollapsibleHeader-icon {
-  height: 40px;
-  width: 40px;
-  font-size: 20px;
+  margin-left: 6px;
+  margin-right: 6px;
+  height: 30px;
+  width: 30px;
+  font-size: 18px;
 }
 
 .CollapsibleHeader-label {
@@ -54,16 +54,17 @@
   @include noSelect;
   @include flexRow;
   @include flexAlignItemsCenter;
+  font-size: 14px;
   cursor: pointer;
 }
 
 .CollapsibleHeader-open {
-  width: 40px;
+  width: 30px;
   &.isSelected { background-color: $zorroa-water-blue; }
 }
 
 .CollapsibleHeader-caret {
-  font-size: 15px;
+  font-size: 14px;
   width: 16px;
   min-width: 16px;
   max-width: 16px;
