--- a/src/components/Racetrack/Collections.scss
+++ b/src/components/Racetrack/Collections.scss
@@ -56,6 +56,8 @@
   min-width: 150px;
   max-width: 400px;
   margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   border-radius: 3px;
   padding-left: 4px;
   padding-right: 4px;
