--- a/src/components/Racetrack/SortOrder.scss
+++ b/src/components/Racetrack/SortOrder.scss
@@ -51,5 +51,7 @@
   padding-left: 4px;
   padding-right: 4px;
   margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   border: 1px solid $zorroa-lightgray;
 }
