--- a/src/components/Folders/Folders.scss
+++ b/src/components/Folders/Folders.scss
@@ -16,13 +16,23 @@
 .Folders-scroll {
   position: relative;
   // max-height: 50vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
-.Folders-scroll-body {
-  position: relative;
-  width: 100%;
+.Folders-body {
+}
+
+.Folders-drop-target {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  pointer-events: none;
+
+  .Folders.isDropTarget & { border: 1px dashed $zorroa-dropzone; }
+  .Folders.isDropTarget.dragHover & { background-color: $zorroa-dropzone; }
 }
 
 .Folders-filter-add {
@@ -153,4 +163,18 @@
   cursor: pointer;
 
   &:hover { color: $zorroa-gray; }
+}
+
+.Folders-empty {
+  @include flexColCenter;
+  background-color: white;
+}
+
+.Folders-empty-icon {
+  font-size: 40px;
+  color: $zorroa-lightgray;
+}
+
+.Folders-empty-label {
+  color: $zorroa-lightgray;
 }
