--- a/src/components/Inspector/Controlbar.scss
+++ b/src/components/Inspector/Controlbar.scss
@@ -2,7 +2,7 @@
 
 .Controlbar {
   position: absolute;
-  bottom: 20px;
+  bottom: 8px;
   margin-left: auto;
   margin-right: auto;
   left: 0;
@@ -10,7 +10,7 @@
   border-radius: 3px;
   box-shadow: 0 2px 4px 4px rgba(0,0,0,0.25);
   color: white;
-  background-color: black;
+  background-color: rgba(0,0,0,0.75);
   padding: 10px 0;
 
   width: auto;
