--- a/src/components/Inspector/Video.scss
+++ b/src/components/Inspector/Video.scss
@@ -119,26 +119,6 @@
     max-height: 60px;
     background: none;
 
-    .Video-time {
-      padding-left: 10px;
-      width: 291px;         // match volume width to center controls
-      font-size: 18px;
-      color: $zorroa-gray;
-
-      .Video-duration {
-        font-size: 16px;
-        padding: 8px;
-        font-weight: 100;
-        font-style: normal;
-        font-stretch: normal;
-      }
-
-      .Video-remaining {
-        @extend .Video-duration;
-        color: $zorroa-lightgray;
-      }
-    }
-
   &.ProgressBar {
     @include fullWidth;
   }
@@ -192,47 +172,6 @@
   }
 
   .Video-misc {
-    @include flexRow;
-    @include flexAlignItemsCenter;
-
-    [class*="icon-"] {
-      color: $zorroa-slategray;
-      background: none;
-      border: none;
-      font-size: 30px;
-    }
-
-    .icon-volume-high {
-      margin-right: 20px;
-      margin-left: 10px;
-    }
-
-    .icon-expand {
-      font-size: 20px;
-      margin-left: 20px;
-      margin-right: 20px;
-    }
-
-    input[type=range] {
-      &::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        border: none;
-        background: none;
-      }
-      &::-moz-range-thumb {
-        -webkit-appearance: none;
-        border: none;
-        background: none;
-      }
-    }
-
-    input {
-      background: none;
-      position: relative;
-      height: 20px;
-      padding-left: 0;
-      margin-left: 0;
-    }
   }
 
   .Video-multipage {
@@ -243,16 +182,28 @@
   }
 }
 
-.Video-volume {
-  position: relative;
-  @include flexRow;
-  @include flexAlignItemsCenter;
+.Video-time {
+  padding-left: 10px;
+  font-size: 18px;
+  color: $zorroa-gray;
+
+  .Video-duration {
+    font-size: 16px;
+    padding: 8px;
+    font-weight: 100;
+    font-style: normal;
+    font-stretch: normal;
+  }
+
+  .Video-remaining {
+    @extend .Video-duration;
+    color: $zorroa-lightgray;
+  }
 }
 
-.Video-volume-background {
+.Video-error {
   position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  left: 8px;
+  top: 8px;
+  color: red;
 }
