--- a/src/components/Header/JobMenu.scss
+++ b/src/components/Header/JobMenu.scss
@@ -76,11 +76,11 @@
   padding-bottom: 5px;
 
   .icon-import {
-    margin-left: 5px;
+    margin-right: 5px;
   }
 
   &:hover {
-    background-color: $zorroa-nearwhite;
+    background-color: white;
   }
 }
 
