--- a/src/components/Searchbar/Searchbar.scss
+++ b/src/components/Searchbar/Searchbar.scss
@@ -7,7 +7,7 @@
   }
 
   border-radius: 3px;
-  border: 1px solid $zorroa-lightgray;
+  border: 1px solid $zorroa-darkgray;
   position: relative;
   padding-left: 4px;
   height: 100%;
