--- a/src/components/Assets/Editbar.scss
+++ b/src/components/Assets/Editbar.scss
@@ -6,13 +6,14 @@
   @include flexAlignItemsCenter;
   @include clampText;
 
-  height: 48px;
+  @include fullHeight;
+  //height: 48px;
 
   color: $zorroa-gray;
   background-color: transparent;
 
   span[class*="icon-"] {
-    margin-left: 6px;
+    margin-right: 6px;
   }
 
   .Editbar-title {
@@ -65,7 +66,7 @@
     }
 
     &:not(.disabled):hover {
-      background-color: $zorroa-nearwhite;
+      background-color: white;
       cursor:pointer;
     }
   }
@@ -86,7 +87,7 @@
     }
 
     &:not(.disabled):hover {
-      background-color: $zorroa-nearwhite;
+      background-color: white;
       cursor:pointer;
     }
   }
@@ -107,4 +108,13 @@
       color: $zorroa-lightgray;
     }
   }
+}
+
+.Editbar-similar-section {
+  @include flexRowCenter;
+  @include fullHeight;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-left: 1px solid $zorroa-lightgray;
+  border-right: 1px solid $zorroa-lightgray;
 }
