--- a/src/components/Assets/ThumbSizeSlider.scss
+++ b/src/components/Assets/ThumbSizeSlider.scss
@@ -1,8 +1,7 @@
 @import '../../styles/core-mixins.scss';
 
 .ThumbSizeSlider {
-  color: #000;
-  background-color: #fff;
+  color: $zorroa-gray;
   padding: 5px 8px;
   border-radius: 3px;
 }
@@ -20,7 +19,7 @@
   height: 30px;
   border-radius: 3px;
   cursor: pointer;
-  &:hover { background-color: $zorroa-lightgray; }
+  &:hover { background-color: white; }
 }
 
 .ThumbSizeSlider-bigger {
@@ -29,7 +28,7 @@
   border-radius: 3px;
   cursor: pointer;
   &:hover {
-    background-color: $zorroa-lightgray;
+    background-color: white;
   }
   [class*='icon-'] {
     font-size: 12px;
@@ -37,6 +36,16 @@
 }
 .ThumbSizeSlider-box {
   position: relative;
+  input::-webkit-slider-thumb {
+    //-webkit-appearance: none;
+    border: none;
+    background: $zorroa-gray;
+  }
+  input::-moz-range-thumb {
+    //-webkit-appearance: none;
+    border: none;
+    background: $zorroa-gray;
+  }
 }
 .ThumbSizeSlider-line-box {
   position: absolute;
@@ -49,5 +58,5 @@
 .ThumbSizeSlider-line {
   width: 120px;
   height: 1px;
-  background-color: $zorroa-sickly-green;
+  background-color: $zorroa-gray;
 }
