--- a/src/components/Racetrack/SimilarHash.scss
+++ b/src/components/Racetrack/SimilarHash.scss
@@ -58,14 +58,40 @@
   margin-right: 2px;
   border: 6px solid transparent;
   position: relative;
-  &.selected { border: 6px solid $zorroa-darkish-purple; }
+}
+
+.SimilarHash-thumb-thumbs-up {
+  position: absolute;
+  bottom: 6px;
+  right: 6px;
+  cursor: pointer;
+  color: $zorroa-lightgray;
+  background-color: rgba(0,0,0,0.5);
+  padding: 6px;
+  border-radius: 3px;
+  &.selected { color: $zorroa-sickly-green; }
+  &:hover { color: black; background-color: rgba(200,200,200,0.75)}
+}
+
+.SimilarHash-thumb-thumbs-down {
+  position: absolute;
+  left: 6px;
+  bottom: 6px;
+  cursor: pointer;
+  color: $zorroa-lightgray;
+  background-color: rgba(0,0,0,0.5);
+  padding: 6px;
+  border-radius: 3px;
+  transform: scaleY(-1) scaleX(-1);
+  &.selected { color: $zorroa-sickly-green; }
+  &:hover { color: black; background-color: rgba(200,200,200,0.75)}
 }
 
 .SimilarHash-thumb-cancel {
   position: absolute;
   right: -8px;
   top: -8px;
-  color: $zorroa-lightgray;
+  color: $zorroa-gray;
   padding: 4px;
 
   &:hover {
