--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -94,7 +94,7 @@
   max-width: 500px;
   border-radius: 3px;
   box-shadow: 0 2px 4px 4px rgba(0,0,0,.25);
-  color: $zorroa-lightgray;
+  color: white;
   background-color: rgba(0,0,0,0.75);
   padding: 0 10px;
 
@@ -121,8 +121,8 @@
   position: relative;
   padding-left: 8px;
   padding-right: 8px;
-  border-left: 1px solid $zorroa-gray;
-  border-right: 1px solid $zorroa-gray;
+  border-left: 1px solid $zorroa-darkgray;
+  border-right: 1px solid $zorroa-darkgray;
   @include flexRowCenter;
 
   .thumb-layout-button {
@@ -130,7 +130,7 @@
     height: 30px;
     font-size: 20px;
     cursor: pointer;
-    color: $zorroa-gray;
+    color: white;
     @include flexRowCenter;
 
     &:not(.thumb-layout-enabled):hover { color: lighten($zorroa-sickly-green, 15%); }
@@ -151,10 +151,12 @@
 }
 
 .TableToggle {
-  margin: 0 10px;
+  padding-left: 8px;
+
+  border-left: 1px solid $zorroa-darkgray;
 
   .TableToggle-button {
-    color: $zorroa-gray;
+    color: white;
     width: 30px;
     height: 30px;
     border: none;
@@ -175,7 +177,7 @@
 .MultipageToggle {
   @include flexRowCenter;
 
-  color: $zorroa-gray;
+  color: white;
   width: 30px;
   height: 30px;
   border-radius: 3px;
@@ -183,6 +185,8 @@
   outline: none;
   font-size: 18px;
   cursor: pointer;
+  padding: 4px 8px;
+  margin-right: 8px;
 
   transform: scaleX(-1) rotate(90deg);
 
