Adjust spacing. Fix menu hover. Do not archivist page searches.

--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -61,7 +61,7 @@
     &:not(.DropdownMenu-separator) {
       cursor: pointer;
       &:hover {
-        background-color: white;
+        background-color: $zorroa-nearwhite;
       }
     }
   }
