--- a/src/components/Racetrack/QuickAddWidget.scss
+++ b/src/components/Racetrack/QuickAddWidget.scss
@@ -34,7 +34,8 @@
       }
 
       &.selected {
-        border: 3px solid $zorroa-gray;
+        opacity: 0.75;
+        border: 3px solid $zorroa-darkgray;
       }
     }
   }
