--- a/src/components/Racetrack/QuickAddWidget.scss
+++ b/src/components/Racetrack/QuickAddWidget.scss
@@ -5,8 +5,8 @@
 
   .QuickAddWidget-list {
     position: absolute;
-    top: 110%;
-    right: 0;
+    top: 120%;
+    left: 0;
     background-color: white;
     border-radius: 3px;
     box-shadow: 0 2px 6px 6px rgba(0,0,0, 0.15);
@@ -48,30 +48,24 @@
 }
 
 .QuickAddWidget-input-container {
+  @include flexRowCenter;
   position: relative;
-
-  .icon-search {
-    position: absolute;
-    left: 10px;
-    top: 0;
-    bottom: 0;
-    margin-top: auto;
-    margin-bottom: auto;
-    color: $zorroa-lightgray;
-    height: 15px;
-    font-size: 15px;
-  }
+  border-radius: 3px;
+  color: white;
+  background-color: $zorroa-sickly-green;
+  padding: 5px;
 }
 
 .QuickAddWidget-input {
-  height: 40px;
-  width: 14em;
-  padding-left: 32px;
-  padding-right: 8px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  border-radius: 3px;
-  border: 1px solid #a5a5a5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  max-width: 24px;
+  padding: 5px;
   font-size: 12px;
   font-weight: 300;
+  border: none;
+  opacity: 0;
+  cursor: pointer;
 }
