Add monochrome preference.

--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -93,9 +93,9 @@
   margin-bottom: 10px;
   max-width: 500px;
   border-radius: 3px;
-  box-shadow: 0 2px 4px 4px rgba(0,0,0,.25);
+  box-shadow: 0 2px 4px 4px rgba(128,128,128,.25);
   color: white;
-  background-color: rgba(0,0,0,0.75);
+  background-color: rgba(128,128,128,0.75);
   padding: 0 10px;
 
   width: auto;
@@ -121,8 +121,12 @@
   position: relative;
   padding-left: 8px;
   padding-right: 8px;
-  border-left: 1px solid $zorroa-darkgray;
-  border-right: 1px solid $zorroa-darkgray;
+  border-left: 1px solid $zorroa-gray;
+  border-right: 1px solid $zorroa-gray;
+  &.dark {
+    border-left: 1px solid $zorroa-darkgray;
+    border-right: 1px solid $zorroa-darkgray;
+  }
   @include flexRowCenter;
 
   .thumb-layout-button {
@@ -131,12 +135,14 @@
     font-size: 20px;
     cursor: pointer;
     color: white;
+    border-radius: 3px;
     @include flexRowCenter;
 
     &:not(.thumb-layout-enabled):hover { color: lighten($zorroa-sickly-green, 15%); }
   }
 
   .thumb-layout-enabled {
+    &:not(.dark) { background-color: rgba(96,96,96,0.75)}
     color: $zorroa-sickly-green;
   }
 }
@@ -153,7 +159,7 @@
 .TableToggle {
   padding-left: 8px;
 
-  border-left: 1px solid $zorroa-darkgray;
+  border-left: 1px solid $zorroa-gray;
 
   .TableToggle-button {
     color: white;
@@ -170,6 +176,7 @@
   .TableToggle-enabled {
     color: $zorroa-sickly-green;
     &:hover { color: darken($zorroa-sickly-green, 15%); }
+    &:not(.dark) { background-color: rgba(96,96,96,0.75)}
   }
 
 }
@@ -195,6 +202,7 @@
   &.MultipageToggle-enabled {
     color: $zorroa-sickly-green;
     &:hover { color: lighten($zorroa-sickly-green, 15%); }
+    &:not(.dark) { background-color: rgba(96,96,96,0.75)}
   }
 }
 
