Add TimeAxis to video display.

--- a/src/components/Suggestions/Suggestions.scss
+++ b/src/components/Suggestions/Suggestions.scss
@@ -9,7 +9,7 @@
 
 .Suggestions-overlapping-inputs {
   @include flexOn;
-  @include flexColCenter;
+  @include flexRowCenter;
   height: 25px;
   position: relative;
 }
