--- a/src/components/Inspector/VideoRange.scss
+++ b/src/components/Inspector/VideoRange.scss
@@ -90,3 +90,21 @@
   border-radius: 2px;
   @include fullHeight;
 }
+
+.VideoRange-movie-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  transform: scaleY(-1);
+}
+
+.VideoRange-axis {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  pointer-events: none;
+}
