--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -158,7 +158,6 @@
 
 .TableToggle {
   padding-left: 8px;
-
   border-left: 1px solid $zorroa-gray;
 
   .TableToggle-button {
@@ -169,6 +168,7 @@
     outline: none;
     font-size: 20px;
     cursor: pointer;
+    border-radius: 3px;
     @include flexRowCenter;
     &:hover { color: lighten($zorroa-sickly-green, 15%); }
   }
