Checkpoint UI for DnD similarity.

--- a/src/components/Import/LocalChooser.scss
+++ b/src/components/Import/LocalChooser.scss
@@ -1,6 +1,7 @@
 @import '../../styles/core-mixins';
 
 .LocalChooser {
+  padding-top: 40px;
   @include flexColCenter;
 }
 
@@ -10,6 +11,7 @@
 }
 
 .LocalChooser-start {
+  @include flexRowCenter;
   margin-top: 40px;
   margin-bottom: 40px;
 }
@@ -228,4 +230,13 @@ $dropcolor: rgba(115, 182, 28, 0.1);
 .LocalChooser-upload-type {
   width: 1px;
   @include nowrap;
+}
+
+.LocalChooser-similar {
+  @include flexRowCenter;
+}
+
+.LocalChooser-similar-label {
+  margin-left: 4px;
+  color: $zorroa-gray;
 }
