--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -105,3 +105,15 @@
 .Workspace-sidebar-spacer {
   height: 10px;
 }
+
+.Workspace-local-chooser {
+  padding-top: 40px;
+  position: relative;
+}
+
+.Workspace-local-chooser-cancel {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  @include zorroa-square-btn-darken(30px)
+}
